<resources>
    <string name="app_name">Pixabay Demo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_register">Or register</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="reload">Reload</string>
    <string name="more_details">More details</string>
    <string name="image_size">Size: %.2f MB</string>
    <string name="image_type">Type: %s</string>
</resources>